--- a/ReciclaAe/app/build.gradle
+++ b/ReciclaAe/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.aronbordin.reciclaae"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 3
+        versionCode 4
         versionName "1.0"
     }
     buildTypes {
@@ -22,9 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
-    compile 'com.google.android.gms:play-services:8.3.0'
-    compile 'com.koushikdutta.ion:ion:2.+'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.koushikdutta.ion:ion:2.1.7'
 }
